[package]
name = "yahmrslib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "yahmrslib"
path = "src/lib.rs"

[features]
default = ["ansi", "hmerr"]
ansi = ["dep:ansi"]
hmerr = ["dep:hmerr"]
ux = ["dep:ux"]
spof = ["dep:spof"]

[dependencies]
ansi = { path = "lib/ansi", optional = true }
hmerr = { path = "lib/hmerr", optional = true }
ux = { path = "lib/ux", optional = true }
spof = { path = "lib/spof", optional = true }