[package]
name = "ansi"
version = "0.1.0"
edition = "2021"
authors = ["Alexdelia"]
description = "A simple ANSI escape code const and macro generator, no dependencies with default features"

[features]
default = ["abbrev"]
abbrev = []
remove = ["dep:ansi-regex"]
gen = ["dep:gen", "dep:const_format"]


[dependencies]
gen = { path = "src/gen", optional = true }
const_format = { version = "0.2.30", optional = true }
ansi-regex = { version = "0.1.0", optional = true }
