[package]
name = "spof"
version = "0.1.0"
edition = "2021"
authors = ["Alexdelia"]
description = "Simple Parser Of Files, hand made simple parser with no external dependencies"

[dependencies]
yahmrslib = { git = "https://github.com/Alexdelia/yahmrslib.git", default-features = false, features = ["ansi", "hmerr"] }
