[package]
name = "spof"
version = "0.1.0"
edition = "2024"
authors = ["Alexdelia"]
description = "Simple Parser Of Files, hand made simple parser with no external dependencies"

[dependencies]
ansi = { git = "https://github.com/Alexdelia/yahmrslib.git" }
hmerr = { git = "https://github.com/Alexdelia/yahmrslib.git" }
